Bug Fix for some browsers
the vertical piece will be blurry on some browsers due to half pixel
values.

--- a/default-404/style.css
+++ b/default-404/style.css
@@ -40,4 +40,8 @@ h1{
     top:0px;
     left:0px;
     z-index:-2;
+
+	    -webkit-transform-style: preserve-3d;
+	    -moz-transform-style: preserve-3d;
+    transform-style: preserve-3d;
 }
